--- a/08 인덱스.md
+++ b/08 인덱스.md
@@ -1,1 +1,2 @@
 <img width="576" height="313" alt="image" src="https://github.com/user-attachments/assets/1d5c988a-a90a-4ab3-8ede-7f2b45d7b53d" />
+<img width="820" height="640" alt="image" src="https://github.com/user-attachments/assets/7885893a-34b8-4940-b9a9-4a2ad3a7cfbe" />
